# Aiko

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  generate_project.cmd  open_project.cmd
aiko/: .gitignore  CMakeLists.txt  Dependencies.cmake  constants.h.in
aiko/src/: aiko.cpp  aiko.h  aiko_config.cpp  aiko_config.h  aiko_exit_codes.h  aiko_includes.h  aiko_libs.h  aiko_types.h  imgui_helper.cpp  imgui_helper.h  main.cpp  uuid.h
aiko/src/application/: application.cpp  application.h
aiko/src/assets/: asset.h  asset_connector.cpp  asset_connector.h  model_asset.cpp  model_asset.h  shader_asset.cpp  shader_asset.h  texture_asset.cpp  texture_asset.h
aiko/src/components/: camera_component.cpp  camera_component.h  component_entity.h  component_renderer.cpp  component_renderer.h  grid_component.cpp  grid_component.h  light_component.cpp  light_component.h  mesh_component.cpp  mesh_component.h  model_component.cpp  model_component.h  pbo_texture_component.cpp  pbo_texture_component.h  render_component_types.h  texture_component.cpp  texture_component.h  transform_component.cpp  transform_component.h
aiko/src/components/2d/: cellular_automaton_component.cpp  cellular_automaton_component.h  grid_component.cpp  grid_component.h  sprite_component.cpp  sprite_component.h
aiko/src/core/: color.h  inputs.h  libs.cpp  libs.h  log.cpp  log.h  math.h  raylib_utils.h  render_types.h  singleton.cpp  singleton.h  utils.cpp  utils.h  uuid.h
aiko/src/events/: engine_events.hpp  event_dispatcher.hpp  events.hpp
aiko/src/models/: camera.cpp  camera.h  camera_types.h  component.cpp  component.h  display.cpp  display.h  game_object.cpp  game_object.h  input.cpp  input.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_factory.cpp  mesh_factory.h  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h  time.cpp  time.h  vector.cpp  vector.h
aiko/src/modules/: asset_module.cpp  asset_module.h  base_module.h  camera_module.cpp  camera_module.h  debug_module.cpp  debug_module.h  display_module.cpp  display_module.h  input_module.cpp  input_module.h  module.h  module_connector.h  platform_module.cpp  platform_module.h  render_module.cpp  render_module.h  render_module_2d.cpp  render_module_2d.h  render_module_font.cpp  render_module_mesh.cpp  render_module_model.cpp  render_module_shader.cpp  render_module_texture.cpp  render_primitives.cpp  render_primitives.h  scene_module.cpp  scene_module.h
aiko/src/modules/assets/: asset_module.cpp  asset_module.h  asset_type.cpp  asset_type.h
aiko/src/modules/imgui/: imgui_impl_bgfx.cpp
aiko/src/modules/render/: 2d_renderer.h  3d_renderer.h  render_module.cpp  render_module.h  render_primitives.cpp  renderer_context.cpp  renderer_context.h
aiko/src/modules/renderer/: render_component_2d.cpp  render_component_2d.h  render_component_3d.cpp  render_component_3d.h  render_component_pixel.cpp  render_component_pixel.h  render_component_texture.cpp  render_component_texture.h  render_module.cpp  render_module.h  render_module_shapes.cpp  render_module_textures.cpp  renderer_component.cpp  renderer_component.h
aiko/src/platform/: platform_builder.cpp  platform_builder.hpp  rename.py
aiko/src/platform/bgfx/: bgfx_2d_renderer.cpp  bgfx_2d_renderer.h  bgfx_3d_renderer.cpp  bgfx_3d_renderer.h  bgfx_debug_module.cpp  bgfx_display_module.cpp  bgfx_display_module.h  bgfx_platform_helper.cpp  bgfx_platform_helper.h  bgfx_platform_module.cpp  bgfx_render_module.cpp  bgfx_render_module.h  bgfx_render_module_draw.cpp  bgfx_render_module_font.cpp  bgfx_render_module_mesh.cpp  bgfx_render_module_model.cpp  bgfx_render_module_shader.cpp  bgfx_render_module_texture.cpp  bgfx_render_utils.cpp  bgfx_render_utils.h
aiko/src/platform/opengl/: opengl_2d_renderer.cpp  opengl_2d_renderer.h  opengl_3d_renderer.cpp  opengl_3d_renderer.h  opengl_debug_module.cpp  opengl_display_module.cpp  opengl_display_module.h  (+11 more)
aiko/src/shared/: math.h  math_transform.cpp  math_transform.h  math_vector.h  singleton.h
aiko/src/systems/: asset_system.cpp  asset_system.h  base_system.h  camera_system.cpp  camera_system.h  entity_component_system.cpp  entity_component_system.h  input_system.cpp  input_system.h  render_system.cpp  render_system.h  render_system_primitives.cpp  system_connector.h  sytem.h
aiko/src/types/: asset_type.h  camera_types.h  color.h  inputs.h  light_types.h  material_type.h  render_types.h  scene_types.h  textures.h
aiko_editor/: CMakeLists.txt  Dependencies.cmake
aiko_editor/src/: aiko_editor.cpp  aiko_editor.h  main.cpp
aiko_editor/src/core/: components_render.cpp  components_render.h  imgui_helper.h
aiko_editor/src/events/: editor_events.h
aiko_editor/src/windows/: component_window.cpp  component_window.h  game_window.cpp  game_window.h  hirearchy_window.cpp  hirearchy_window.h  menu_bar.cpp  menu_bar.h  window.cpp  window.h
examples/life_particle/: CMakeLists.txt
examples/life_particle/src/: life_particle.cpp  life_particle.h  main.cpp  particle.cpp  particle.h
examples/loop_recorder/: CMakeLists.txt  Dependencies.cmake
examples/loop_recorder/src/: audio_utils.cpp  audio_utils.h  loop_player.cpp  loop_player.h  loop_recorder.cpp  loop_recorder.h  loop_recorder_gui.cpp  loop_recorder_gui.h  loop_visualizer.cpp  loop_visualizer.h  main.cpp
examples/nes6502/: CMakeLists.txt  Dependencies.cmake  constants.h.in
examples/nes6502/assets/: .gitignore
examples/nes6502/src/: bus.cpp  bus.h  cartridge.cpp  cartridge.h  cpu.cpp  cpu.h  cpu_addressing_modes.cpp  cpu_execute.cpp  cpu_instructions.cpp  cpu_stack_memory.cpp  instructions.cpp  instructions.h  main.cpp  memory.cpp  memory.h  nes6502.cpp  nes6502.h  nes_emulator.cpp  nes_emulator.h  nes_test_log.cpp  nes_test_log.h  nes_types.h  nes_utils.cpp  nes_utils.h  ppu.cpp  ppu.h
examples/sandbox/: CMakeLists.txt
examples/sandbox/src/: main.cpp  particle.cpp  particle.h  particle_component.cpp  particle_component.hpp  sandbox.cpp  sandbox.h
examples/sandbox2D/: CMakeLists.txt
examples/sandbox2D/src/: main.cpp  sandbox2D.cpp  sandbox2D.h
(+229 files in other folders)
